# megasdkrestpp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  HttpServer.cpp  HttpServer.h  MegaAppRequestListener.cpp  MegaAppRequestListener.h  MegaAppTransferListener.cpp  MegaAppTransferListener.h  MegaDownload.cpp  MegaDownload.h  MegaDownloader.cpp  MegaDownloader.h  README.md  Utils.cpp  Utils.h  build.py  docker-compose.yaml  log.cpp  log.h  main.cpp  structs.h
dependencies/include/: config.h
